fixing download link alignment issues

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -112,3 +112,13 @@ figure {
     }
   }
 }
+
+// More robust clearfix class than what is in theme
+.clearfix:after {
+  visibility: hidden;
+  display: block;
+  font-size: 0;
+  content: " ";
+  clear: both;
+  height: 0;
+}
